<?xml version="1.0"?>
<package format="2">
  <name>ffrc_motion_planner</name>
  <version>0.0.0</version>
  <description>The ffrc_motion_planner package</description>

  <maintainer email="unal@todo.todo">GitSRealpe</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>eigen</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_perception</depend>
  <depend>rosbag</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>opencv</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- FFRC planner plugin for MoveIt -->
    <moveit_core plugin="${prefix}/ffrc_interface_plugin_description.xml" />
  </export>
</package>